New Features and Bug Fixes since v0.2, preview 1

 * 'setupModule()' and 'adviseModule()' will now issue warnings for most
   questionable code structures and variable redefinitions that might not
   work the way you'd expect or intend under module inheritance.

 * Added tests and documentation for 'adviseModule()' API

 * Added a 'test' command to 'setup.py' that installs and then tests all of
   TransWarp.  (It saves me time running the unit tests while I'm writing
   new code.)

 * Added warnings for detectable module-level modifications of mutables
   in modules which are used for inheritances or advice.  Added an API
   function, 'configure(object, attr1=val, attr2=val,...)' to safely
   set attributes of mutables that might have been defined in a derived
   module.

 * Removed 'Meta.ClassInit' and '__class_init__' support.  Use metaclass
   '__init__' methods instead; see 'TW.Database.DataModel.RecordTypeMC'
   for one example of the conversion.

 * Added 'SEF.bindToParent()', 'SEF.bindToNames()', and 'SEF.bindToSelf()'
   descriptors, to allow more flexible component parameter bindings.

 * Improved key integrity checks in DataModel: Record objects now disallow
   modification of key fields unless the old value is None, and cache
   collisions between records with supposedly unique keys will result in an
   AssertionError.

 * Added 'SET' method (ala WarpCORE's set_X procedures) to
   TW.Utils.MiniTable.

 * Added more docs to TW.Utils.Code, and removed 'iterFromEnd()' method
   from code objects.  Added experimental 'nextSplit' index to codeIndex
   objects that does top-level block analysis to allow splitting a code
   object into smaller routines.

 * Fixed the "reference to rebound class within another class" problem
   with module inheritance, as reported by (who else?) Ulrich Eck.  :)

 * Rewrote SEF "features" to use 'element.verbFeature()' style methods
   instead of 'element.feature.verb()' style.  UML/XMI/Querying code